feat: add different load button to show css split load

--- a/src/containers/Posts/style.css
+++ b/src/containers/Posts/style.css
@@ -7,5 +7,6 @@
   outline: none;
   height: 40px;
   cursor: pointer;
-  background-color: $light-bg;
+  color: #fff;
+  background-color: $blue;
 }
