--- a/src/desktop/styles/basic.css
+++ b/src/desktop/styles/basic.css
@@ -1,3 +1,3 @@
 @import "normalize.css";
-@import "./typography/index.css";
-@import "./ui/index.css";
+@import "../../styles/typography/index.css";
+@import "../../styles/ui/index.css";
