--- a/src/mobile/components/Panel/style.css
+++ b/src/mobile/components/Panel/style.css
@@ -1,10 +1,33 @@
 .panel {
-  padding: 20px;
-
   .header {
-    .title {
-      margin: 0;
-      font-size: 16px;
+    display: flex;
+    position: relative;
+    &.has-background {
+      height: 200px;
     }
+    .background {
+      position: absolute;
+      top: 0;
+      left: 50%;
+      height: 100%;
+      transform: translateX(-50%);
+      img {
+        height: 100%;
+      }
+    }
+    .title {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      margin: auto;
+      font-size: 30px;
+      line-height: 1em;
+      color: #fff;
+    }
+  }
+  .content {
+    padding: 0 20px;
   }
 }
