--- a/src/mobile/containers/Posts/style.css
+++ b/src/mobile/containers/Posts/style.css
@@ -1,4 +1,4 @@
-@import "../../styles/variables.css";
+@import "../../../styles/variables.css";
 
 .load-more {
   margin-top: 20px;
@@ -7,6 +7,5 @@
   outline: none;
   height: 40px;
   cursor: pointer;
-  color: #fff;
-  background-color: $blue;
+  color: $secondary;
 }
