--- a/src/mobile/styles/basic.css
+++ b/src/mobile/styles/basic.css
@@ -1,3 +1,7 @@
 @import "normalize.css";
-@import "./typography/index.css";
-@import "./ui/index.css";
+@import "../../styles/typography/index.css";
+@import "../../styles/ui/index.css";
+
+button {
+  background-color: transparent;
+}
