--- a/src/mobile/containers/Profile/style.css
+++ b/src/mobile/containers/Profile/style.css
@@ -1,33 +1,42 @@
 .profile-page {
     header {
         position: relative;
+        height: 150px;
         width: 100%;
         overflow: hidden;
+        img {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 150px;
+        }
         h1 {
-            color: #666;
+            color: #fff;
             font-size: 20px;
             font-weight: normal;
         }
         .content {
             position: relative;
             z-index: 2;
-            padding: 20px;
+            width: 100%;
+            height: 100%;
+            line-height: 150px;
+            text-align: center;
         }
     }
     .profile-detail {
         padding: 20px;
         .meta {
-            display: flex;
         }
         .avatar {
             width: 100px;
             height: 100px;
-            margin-right: 20px;
             border-radius: 100%;
             overflow: hidden;
             border: 1px solid #eee;
         }
         .info {
+            margin-top: 20px;
             .field {
                 margin-top: 5px;
                 display: flex;
