feat: click menu item will close menu popup

--- a/src/desktop/containers/Profile/style.css
+++ b/src/desktop/containers/Profile/style.css
@@ -1,4 +1,7 @@
 .profile-page {
+    max-width: 1080px;
+    margin-left: auto;
+    margin-right: auto;
     header {
         position: relative;
         width: 100%;
